@@ -1,7 +1,7 @@
-Before second alpha (in order of priority):
-    - CheckHeader and CheckLib ala scons, with site.cfg support.
-
 Before first beta:
+    - rewrite CheckLibAndHeader to reuse save/restore thing from checkers
+    - fortran / VS interaction: look at build_ext of numpy.distutils, need hack
+      to make this works
     - f2py and scipy interoperability: N hours ?
     - support environments wo fortran compilers
 
@@ -30,6 +30,9 @@ Implementation details:
 
 Tests:
     - What can be tested ?
+
+Fortran:
+    - Rewrite verbose output parser using shlex for quote handling
 
 Documentation:
     - scons / distutils integration, global design (BuildDir, directories, etc...)
